; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_mount.c_xfs_freesb.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_mount.c_xfs_freesb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_mount = type { %struct.xfs_buf* }
%struct.xfs_buf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xfs_freesb(%struct.xfs_mount* %0) #0 {
  %2 = alloca %struct.xfs_mount*, align 8
  %3 = alloca %struct.xfs_buf*, align 8
  store %struct.xfs_mount* %0, %struct.xfs_mount** %2, align 8
  %4 = load %struct.xfs_mount*, %struct.xfs_mount** %2, align 8
  %5 = getelementptr inbounds %struct.xfs_mount, %struct.xfs_mount* %4, i32 0, i32 0
  %6 = load %struct.xfs_buf*, %struct.xfs_buf** %5, align 8
  store %struct.xfs_buf* %6, %struct.xfs_buf** %3, align 8
  %7 = load %struct.xfs_buf*, %struct.xfs_buf** %3, align 8
  %8 = call i32 @xfs_buf_lock(%struct.xfs_buf* %7)
  %9 = load %struct.xfs_mount*, %struct.xfs_mount** %2, align 8
  %10 = getelementptr inbounds %struct.xfs_mount, %struct.xfs_mount* %9, i32 0, i32 0
  store %struct.xfs_buf* null, %struct.xfs_buf** %10, align 8
  %11 = load %struct.xfs_buf*, %struct.xfs_buf** %3, align 8
  %12 = call i32 @xfs_buf_relse(%struct.xfs_buf* %11)
  ret void
}

declare dso_local i32 @xfs_buf_lock(%struct.xfs_buf*) #1

declare dso_local i32 @xfs_buf_relse(%struct.xfs_buf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
